# Home_Work_WEB_6

./: connect.py  create.py  insert.py  pyproject.toml  query_01.py  query_02.py  query_03.py  query_04.py  query_05.py  query_06.py  query_07.py  query_08.py  query_09.py  query_10.py  query_11.py  query_12.py
