[tool.poetry]
name = "home-work-web-6"
version = "0.1.0"
description = ""
authors = ["AndriKovalchuk <andrii.kovalchuk90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
